// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ReportChartLegend with others dataset: {"datasets":[{"name":"doc","chartType":"bar","values":[9,18,17,0,0,0,0,0],"bgColor":"bg-juniper-600"},{"name":"security","chartType":"bar","values":[18,19,5,0,0,0,0,0],"bgColor":"bg-juniper-500"},{"name":"bug-risk","chartType":"bar","values":[11,19,10,0,0,0,0,0],"bgColor":"bg-juniper-300"},{"name":"others","chartType":"bar","values":[62,51,45,0,0,0,0,0],"bgColor":"bg-juniper-100"}],"othersDatasetNames":["antipattern","coverage","performance","style","typecheck"]} 1`] = `
"<div class=\\"gap-x-7 gap-y-3 text-xs leading-3 text-vanilla-400 flex flex-wrap\\">
  <div class=\\"flex items-center gap-x-2 truncate\\"><span class=\\"h-2 w-2 flex-shrink-0 rounded-sm bg-juniper-600\\"></span>
    Documentation
  </div>
  <div class=\\"flex items-center gap-x-2 truncate\\"><span class=\\"h-2 w-2 flex-shrink-0 rounded-sm bg-juniper-500\\"></span>
    Security
  </div>
  <div class=\\"flex items-center gap-x-2 truncate\\"><span class=\\"h-2 w-2 flex-shrink-0 rounded-sm bg-juniper-300\\"></span>
    Bug risk
  </div><span class=\\"z-menu relative\\"><div class=\\"leading-none\\"><button class=\\"flex cursor-pointer items-center gap-x-2 leading-3 hover:text-vanilla-100 focus:text-vanilla-100\\"><span class=\\"h-2 w-2 rounded-sm bg-juniper-100\\"></span> Others
  </button>
</div>
<!----></span></div>"
`;

exports[`renders ReportChartLegend without others dataset: {"datasets":[{"name":"doc","chartType":"bar","values":[9,18,17,0,0,0,0,0],"bgColor":"bg-juniper-600"},{"name":"security","chartType":"bar","values":[18,19,5,0,0,0,0,0],"bgColor":"bg-juniper-500"},{"name":"bug-risk","chartType":"bar","values":[11,19,10,0,0,0,0,0],"bgColor":"bg-juniper-300"}]} 1`] = `
"<div class=\\"gap-x-7 gap-y-3 text-xs leading-3 text-vanilla-400 flex flex-wrap\\">
  <div class=\\"flex items-center gap-x-2 truncate\\"><span class=\\"h-2 w-2 flex-shrink-0 rounded-sm bg-juniper-600\\"></span>
    Documentation
  </div>
  <div class=\\"flex items-center gap-x-2 truncate\\"><span class=\\"h-2 w-2 flex-shrink-0 rounded-sm bg-juniper-500\\"></span>
    Security
  </div>
  <div class=\\"flex items-center gap-x-2 truncate col-start-2\\"><span class=\\"h-2 w-2 flex-shrink-0 rounded-sm bg-juniper-300\\"></span>
    Bug risk
  </div>
</div>"
`;
